# credit-markets-pipeline

./: .env.example  .gitignore  Makefile  PHASE1_SUMMARY.md  README.md  RUNBOOK.md  docker-compose.yml  output.json  pyproject.toml  requirements-lambda.txt
.github/workflows/: ci.yml
airflow/dags/: credit_markets_daily.py
dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml  requirements.txt
dbt/models/: sources.yml
dbt/models/gold/: yield_curve_d10.sql
dbt/models/staging/: stg_treasury_yields.sql
gx/: great_expectations.yml
gx/checkpoints/: treasury_checkpoint.json
gx/expectations/: .ge_store_backend_id  fred_data_suite.json
gx/validation_definitions/: treasury_validation.json
infrastructure/docker/: Dockerfile
infrastructure/lambda/: post_processor.py
infrastructure/localstack/: init-s3.sh
infrastructure/sql/init/: 00_reference.sql  01_schemas.sql  02_gold_views.sql
scripts/: deploy-lambda.sh  fetch_companies.py  seed_fred_series.py
sql/practice/: advanced_aggregations.sql  ctes_and_recursive.sql  day33_sql_drill.sql  day33_stratascratch_tracker.md  day34_sql_drill.sql  day34_tracker.md  query_optimization.sql  window_functions.sql
src/credit_markets/: __init__.py  cli.py  lambda_handler.py
src/credit_markets/config/: settings.py
src/credit_markets/ingestion/: fred.py  sec.py
src/credit_markets/observability/: logging.py
src/credit_markets/pipeline/: daily.py
src/credit_markets/quality/: __init__.py  expectations.py
src/credit_markets/storage/: postgres.py  s3.py
src/credit_markets/transform/: fred.py  sec.py
src/credit_markets/utils/: parallel.py  retry.py
tests/: conftest.py
tests/unit/: test_circuit_breaker.py  test_config.py  test_rate_limiter.py  test_retry.py
