[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-markets-pipeline"
version = "0.1.0"
description = "Production-grade credit markets data platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # HTTP & APIs
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    
    # AWS
    "boto3>=1.34.0",
    
    # Database
    "psycopg[binary,pool]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    
    # Data Processing
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "deltalake>=0.14.0",
    
    # Data Quality
    "great-expectations>=0.18.0",
    "pandera>=0.18.0",
    
    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    
    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "testcontainers>=3.7.0",
    "moto[s3]>=5.0.0",
    "freezegun>=1.4.0",
    "factory-boy>=3.3.0",
    
    # Linting & Formatting
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    
    # Types
    "types-requests>=2.31.0",
    "pandas-stubs>=2.1.0",
    "boto3-stubs[s3]>=1.34.0",
]

dashboard = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
]

airflow = [
    "apache-airflow>=2.8.0",
]

[project.scripts]
credit-markets = "credit_markets.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/credit-markets-pipeline"
Documentation = "https://github.com/yourusername/credit-markets-pipeline#readme"
Repository = "https://github.com/yourusername/credit-markets-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["credit_markets"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["great_expectations.*", "deltalake.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires Docker)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests (skip with -m 'not slow')",
]

[tool.coverage.run]
source = ["src/credit_markets"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80
